# codeExam

./: .gitignore  README.md
.idx/: dev.nix
c++/1dArr/: checkIncrease.cpp  checkPrimeNumber.cpp  checkSquareNumber.cpp  checkSunset.cpp  checkSymetry.cpp  countRepeatedElement.cpp  detectNegativeNumber.cpp  findAValue.cpp  findRevertedPairs.cpp  findSecondMinMax.cpp  initArr.cpp  printArr.cpp  printPair.cpp  printPrimeNumber.cpp  printSquareNumber.cpp  revertArray.cpp  sumPositiveNumber.cpp
c++/dsa/: heapSort01.cpp  linearSearch00.cpp  linearSearch01.cpp  linearSearch02.cpp  linearSearch04.cpp  mergeSort01.cpp  mergeSort02.cpp  quickSort02.cpp  selectionSort02.cpp
c++/dsa/BST/: bst_countLeafNodes.cpp  bst_countNodesAtLevelK.cpp  bst_countNodesWithDegreeEqualToK.cpp  bst_getDegreeOfANode.cpp  bst_getDegreeOfBst.cpp  bst_getHeight.cpp  bst_getLevelOfANode.cpp  bst_printInInOrderTraversal.cpp  bst_printInPostOrderTraversal.cpp  bst_printInPreOrderTraversal.cpp
c++/dsa/hash/: hashDeleteElement.cpp  hashFindAddressesOfTheMostCollisions.cpp  hashSearchById.cpp  hashTotalCollisions.cpp  hashaddStudent.cpp
c++/dsa/search/: binarySearch00.cpp  binarySearch01.cpp  binarySearch02.cpp  (+5 more)
c++/oop/oop04/01-cFactionsWithOverLoading/: CMakeLists.txt  build.sh  cFraction_add.cpp  cFraction_compare.cpp  cFraction_constructor.cpp  cFraction_destructor.cpp  cFraction_divide.cpp  cFraction_input.cpp  cFraction_io.cpp  cFraction_multiply.cpp  cFraction_output.cpp  cFraction_simplify.cpp  cFraction_subtract.cpp  cFractions.h  cFractions_constructor.cpp  cFractions_destructor.cpp  cFractions_input.cpp  cFractions_max.cpp  cFractions_min.cpp  cFractions_output.cpp  cFractions_sort.cpp  cFractions_sum.cpp  main.cpp
c++/oop/oop04/02-cComplexNumberWithOverLoading/: CMakeLists.txt  build.sh  cComplexNumber.h  cComplex_add.cpp  cComplex_compare.cpp  cComplex_constructor.cpp  cComplex_destructor.cpp  cComplex_divide.cpp  cComplex_input.cpp  cComplex_modulus.cpp  cComplex_multiply.cpp  cComplex_output.cpp  cComplex_subtract.cpp  cComplexes.h  cComplexes_assign.cpp  cComplexes_constructor.cpp  cComplexes_destructor.cpp  cComplexes_input.cpp  cComplexes_max.cpp  cComplexes_min.cpp  cComplexes_output.cpp  cComplexes_sort.cpp  cComplexes_sum.cpp  main.cpp
c++/oop/oop04/03-cTimeWithOverLoading/: CMakeLists.txt  build.sh  cTime.h  cTime_add.cpp  cTime_addTime.cpp  cTime_compare.cpp  cTime_constructor.cpp  cTime_decrement.cpp  cTime_destructor.cpp  cTime_difference.cpp  cTime_increment.cpp  cTime_input.cpp  cTime_normalize.cpp  cTime_output.cpp  cTime_subtract.cpp  cTimes.h  cTimes_assign.cpp  cTimes_constructor.cpp  cTimes_destructor.cpp  cTimes_input.cpp  cTimes_max.cpp  cTimes_min.cpp  cTimes_output.cpp  cTimes_sort.cpp  cTimes_sum.cpp  main.cpp
c++/oop/oop04/04-cDateWithOverLoading/: CMakeLists.txt  build.sh  cAccount.h  cAccount_calculateInterest.cpp  cAccount_constructor.cpp  cAccount_destructor.cpp  cAccount_input.cpp  cAccount_output.cpp  cDate.h  cDate_add.cpp  cDate_compare.cpp  cDate_constructor.cpp  cDate_decrement.cpp  cDate_destructor.cpp  cDate_difference.cpp  cDate_increment.cpp  cDate_input.cpp  cDate_output.cpp  cDate_subtract.cpp  cDate_utils.cpp  cDate_weekday.cpp  cDates.h  cDates_assign.cpp  cDates_constructor.cpp  cDates_destructor.cpp  cDates_input.cpp  cDates_max.cpp  cDates_min.cpp  cDates_output.cpp  cDates_sort.cpp  main.cpp
c++/oop/oop04/05-cPolynomialWithOverLoading/: CMakeLists.txt  build.sh  cPolynomial_add.cpp  cPolynomial_assign.cpp  cPolynomial_compare.cpp  cPolynomial_constructor.cpp  cPolynomial_destructor.cpp  cPolynomial_evaluate.cpp  cPolynomial_input.cpp  cPolynomial_multiply.cpp  cPolynomial_normalize.cpp  cPolynomial_output.cpp  cPolynomial_subtract.cpp  cPolynomials.h  cPolynomials_assign.cpp  cPolynomials_constructor.cpp  cPolynomials_destructor.cpp  cPolynomials_input.cpp  cPolynomials_max.cpp  cPolynomials_min.cpp  cPolynomials_output.cpp  cPolynomials_sort.cpp  main.cpp
c++/string/: countBlank.cpp  countSpecial.cpp  isSymmetry.cpp  printString.cpp  reverseString.cpp
ssh/: deployKey.gpg  deployKey.pub.gpg  ssh.sh
(+156 files in other folders)
